--- a/HappyPenguin/AppShell.xaml
+++ b/HappyPenguin/AppShell.xaml
@@ -2,7 +2,7 @@
 <Shell
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:view="clr-namespace:HappyPenguin.View"
+    xmlns:views="clr-namespace:HappyPenguin.Views"
     xmlns:fontawsome="clr-namespace:HappyPenguin.Utils"
     x:Class="HappyPenguin.AppShell"
     BackgroundColor="{StaticResource backgroundColor}">
@@ -60,7 +60,7 @@
                     Size="Title" />
             </Tab.Icon>
             <ShellContent
-                ContentTemplate="{DataTemplate view:DashboardPage}" />
+                ContentTemplate="{DataTemplate views:DashboardPage}" />
         </Tab>
         <Tab
             Title="Log new weight">
@@ -71,7 +71,7 @@
                     Size="Title" />
             </Tab.Icon>
             <ShellContent
-                ContentTemplate="{DataTemplate view:WeightPage}" />
+                ContentTemplate="{DataTemplate views:WeightPage}" />
         </Tab>
         <Tab
             Title="Graph">
@@ -82,12 +82,34 @@
                     Size="Title" />
             </Tab.Icon>
             <ShellContent
-                ContentTemplate="{DataTemplate view:GraphPage}" />
+                ContentTemplate="{DataTemplate views:GraphPage}" />
         </Tab>
+        <!--<Tab
+            Title="Bluetooth">
+            <Tab.Icon>
+                <FontImageSource
+                    FontFamily="{StaticResource FontAwesomeSolid}"
+                    Glyph="&#xf080;"
+                    Size="Title" />
+            </Tab.Icon>
+            <ShellContent
+                ContentTemplate="{DataTemplate views:BluetoothConnectviews}" />
+        </Tab>
+        <Tab
+            Title="Thermometer">
+            <Tab.Icon>
+                <FontImageSource
+                    FontFamily="{StaticResource FontAwesomeSolid}"
+                    Glyph="&#xf080;"
+                    Size="Title" />
+            </Tab.Icon>
+            <ShellContent
+                ContentTemplate="{DataTemplate views:DeviceInfoviews}" />
+        </Tab>-->
     </FlyoutItem>
     <ShellContent
         Title="About"
-        ContentTemplate="{DataTemplate view:AboutPage}">
+        ContentTemplate="{DataTemplate views:AboutPage}">
         <ShellContent.Icon>
             <FontImageSource
                 FontFamily="{StaticResource FontAwesomeSolid}"
@@ -98,7 +120,7 @@
     </ShellContent>
     <ShellContent
         Title="Help"
-        ContentTemplate="{DataTemplate view:HelpPage}">
+        ContentTemplate="{DataTemplate views:HelpPage}">
         <ShellContent.Icon>
             <FontImageSource
                 FontFamily="{StaticResource FontAwesomeSolid}"
@@ -125,7 +147,7 @@
                     Size="Title" />
             </Tab.Icon>
             <ShellContent
-                ContentTemplate="{DataTemplate view:SettingsPage}" />
+                ContentTemplate="{DataTemplate views:SettingsPage}" />
         </Tab>
         <Tab
             Title="Bluetooth">
@@ -136,7 +158,7 @@
                     Size="Title" />
             </Tab.Icon>
             <ShellContent
-                ContentTemplate="{DataTemplate view:BluetoothPage}" />
+                ContentTemplate="{DataTemplate views:BluetoothPage}" />
         </Tab>
     </FlyoutItem>
 </Shell>
