--- a/HappyPenguin/Views/DashboardPage.xaml
+++ b/HappyPenguin/Views/DashboardPage.xaml
@@ -2,13 +2,13 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="HappyPenguin.View.AboutPage"
-    Title="About"
+    x:Class="HappyPenguin.Views.DashboardPage"
+    Title="Dashboard"
     BackgroundColor="{StaticResource backgroundColor}">
     <ContentPage.Content>
         <StackLayout>
             <Label
-                Text="Welcome to About Page"
+                Text="Welcome to Dashboard Page"
                 FontSize="20"
                 VerticalOptions="CenterAndExpand"
                 HorizontalOptions="CenterAndExpand" />
