--- a/HappyPenguin/Views/BluetoothPage.xaml
+++ b/HappyPenguin/Views/BluetoothPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:HappyPenguin"
+    xmlns:local="clr-namespace:HappyPenguin.ViewModels"
     x:Class="HappyPenguin.Views.BluetoothPage"
     Title="Bluetooth Page"
     BackgroundColor="{StaticResource backgroundColor}">
